<resources>
    <string name="app_name">Student App</string>
    <string name="logo_login_page_description">Logo Login Page</string>
    <string name="pass_hint">Password…</string>
    <string name="email_hint">Your USN…</string>
    <string name="login_to_account_btn">Login To Account</string>
    <string name="create_new_account_btn">Need A New Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="register_page_logo">Register Page Logo</string>
    <string name="reg_create_account_btn">Create New Account</string>
    <string name="reg_alreadyhaveaccount_btn">Already Have An Account?</string>
    <string name="reg_confirm_pwd_hint">Confirm Password…</string>
    <string name="student_setup_name_hint">Enter Your name…</string>
    <string name="student_setup_btn_text">Save Account Settings</string>
    <string name="student_setup_usn_hint">Enter USN…</string>
    <string name="student_setup_class_hint">Enter Class…</string>
    <string name="student_setup_branch_hint">Enter Branch…</string>
    <string name="student_setup_semester_hint">Enter Semester…</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">Student_CH_01</string>
    <string name="loading_faculty_name">Loading Faculty Name…</string>
    <string name="exernal_marks">Exernal Marks:</string>
    <string name="total_marks">Total Marks:</string>
    <string name="internal_1_marks">Internal 1 Marks:</string>
    <string name="internal_2_marks">Internal 2 Marks:</string>
    <string name="internal_3_marks">Internal 3 Marks:</string>
    <string name="internal_average_marks">Internal Average Marks:</string>
    <string name="loading_marks">Loading Marks…</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="place_your_finger_on_the_scanner_to_proceed">Place Your Finger On The Scanner To Proceed</string>
    <string name="select_semester">Select Semester</string>
    <string name="loading_days_attended">Loading Days Attended…</string>
    <string name="loading_subject_teacher">Loading Subject Teacher…</string>
    <string name="loading_percentage">Loading Percentage…</string>
    <string name="marks">Marks</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="todo">TODO</string>
    <string name="loading_title">Loading Title…</string>
    <string name="event_is_still_going_on">Event Is Still Going On.</string>
    <string name="loading_uploadedon">Loading UploadedOn…</string>
    <string name="loading_usn">Loading USN…</string>
    <string name="loading_branch">Loading Branch…</string>
    <string name="loading_semester">Loading Semester…</string>
    <string name="loading_class">Loading Class…</string>
    <string name="loading_class_teacher">Loading Class Teacher…</string>
    <string name="loading_proctor">Loading Proctor…</string>
    <string name="see_previous_semester_details">See Previous Semester Details</string>
    <string name="no_class_today">No Class Today</string>
    <string name="last_uploaded_notes">Last Uploaded Notes</string>
    <string name="last_notification">Last Notification</string>
    <string name="no_notification_till_now">No Notification Till Now</string>
    <string name="no_class">No Class</string>
    <string name="loading_name_value">Loading Name</string>
    <string name="loading_description">Loading Description…</string>
    <string name="loading_date">Loading Date…</string>
    <string name="loading_name">Loading Name…</string>
    <string name="loading_message">Loading Message…</string>
    <string name="loading_time">Loading Time…</string>
    <string name="date">Date</string>
    <string name="absent">Absent</string>
    <string name="time">Time</string>
    <string name="class_time_value">Class Time Value</string>
    <string name="loading_subjects">Loading Subjects…</string>
    <string name="events">Events</string>
</resources>
