<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btm_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/btm_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/btm_notes"
        android:icon="@drawable/ic_note_black_24dp"
        android:title="@string/notes" />
    <item
        android:id="@+id/btm_events"
        android:icon="@mipmap/ic_events"
        android:title="@string/events" />
    <item
        android:id="@+id/btm_details"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/details" />
</menu>