<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eventUploadedOn"
        android:layout_marginStart="20dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/loading_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uploadedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/loading_description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/eventStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        android:gravity="right"
        android:padding="5dp"
        android:text="@string/event_is_still_going_on"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/eventUploadedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:padding="5dp"
        android:text="@string/loading_uploadedon"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal" />
</RelativeLayout>