<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sender_list_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:src="@mipmap/default_profile_picture" />

    <TextView
        android:id="@+id/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sender_list_image"
        android:layout_toEndOf="@+id/sender_list_image"
        android:padding="15dp"
        android:text="@string/loading_name"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sender_name"
        android:layout_below="@+id/sender_list_image"
        android:padding="10dp"
        android:text="@string/loading_message"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/message_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sender_name"
        android:layout_alignBottom="@+id/sender_name"
        android:layout_alignParentEnd="true"
        android:padding="2dp"
        android:text="@string/loading_time"
        android:textSize="13sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sender_list_image"
        android:layout_below="@+id/sender_list_image"
        android:layout_marginTop="-20dp">

        <com.like.LikeButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon_size="25dp"
            app:icon_type="star"
            app:is_enabled="false" />

    </LinearLayout>


</RelativeLayout>